--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,10 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+
+$ touch CNAME
+katejfrey.com
+www.katejfrey.com
+
+$ git add -A
+$ git commit -m 'add CNAME file'
+$ git push origin master
